--- a/index.html
+++ b/index.html
@@ -54,14 +54,70 @@
           <div class="hero-right">
             <h1 class="hero-title"> Lorem Ipsum is simply </h1>
             <p class="hero-description"> dummy text of the <span class="description-content"> printing & typesetting </span> </p>
-            <button class="main-button"> <p class="button-description"> Sing up now </p></button>  
+            <button class="main-button"> <p class="button-description"> Sing up now </p></button>
           </div>
         </div>
       </section>
       <main class="main">
-
+        <section>
+        <div class="container">
+          <div class="row">
+            <div class="col-1-3">
+              <div class="card">
+                <div class="card-header pencil">
+                  <figure class="card-img"> <img class="card-img" src="images/pencil.svg"></figure>
+                </div>
+                <div class="card-body">
+                  <div class="card-title"> Contrary to popular </div>
+                  <div class="card-description"> Lorem Ipsum is not simply random text. It has roots in a piece </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-1-3">
+              <div class="card">
+                <div class="card-header tele">
+                  <figure class="card-img"> <img class="card-img" src="images/tele.svg"></figure>
+                </div>
+                <div class="card-body">
+                  <div class="card-title"> Contrary to popular </div>
+                  <div class="card-description"> Lorem Ipsum is not simply random text. It has roots in a piece </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-1-3">
+              <div class="card">
+                <div class="card-header basket">
+                  <figure class="card-img"> <img class="card-img" src="images/basket.svg"></figure>
+                </div>
+                <div class="card-body">
+                  <div class="card-title"> Contrary to popular </div>
+                  <div class="card-description"> Lorem Ipsum is not simply random text. It has roots in a piece </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <section> <div class="container cart-container">
+        <div class="layout"><div class="gray-title"> The Shopping cart </div>
+          <figure class= "blue-basket"> <img src="images/cart.png" class="blue-basket"> </figure> </div>
+<div class="layout2"> <div class="gray-title bullets"> Some Bullet text here </div>
+<ul class="list">
+<li> Lorem Ipsum is simply dummy text of the printing and typesetting
+</li>
+<li>Lorem Ipsum has been the industry's standard dummy text ever </li>
+<li> When an unknown printer took a galley of type and scrambled </li>
+<li> It to make a type specimen book. It has survived not only five centuries</li>
+<li> But also the leap into electronic typesetting,</li>
+<li>Remaining essentially unchanged. It was popularised  </li>
+<li>The release of Letraset sheets containing Lorem Ipsum passages</li>
+</ul>
+</div>
+</div>
+</section>
+</div>
       </main>
-      <footer class="footer"></footer>
+      <footer class="footer"> Copyright © 2012-2013 cssauthor.com</footer>
     </body>
-
+</div>
 </html>
