--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <header class="header">
           <div class="header-left">
-            <a class="logo-link" href="index.html"> <img class="logo"src="images/logo.png"></img></a></div>
+            <a class="logo-link" href="index.html"> <span class="logo"> <div class="icon-quotes-left"> </div></span></a></div>
           <div class="header-right">
             <div class="burger">
               <table class="burger-nav">
@@ -38,10 +38,10 @@
               </table>
             </div>
             <nav class="navigation">
-              <a href="#"> Home </a>
-              <a href="#"> Poducts </a>
-              <a href="#"> Services </a>
-              <a href="#"> Conact </a>
+              <a class="home-link" href="#"> Home </a>
+              <a class="link" href="#"> Poducts </a>
+              <a class="link" href="#"> Services </a>
+              <a class="link" href="#"> Conact </a>
             </nav>
           </div>
       </div>
