what's wrong whith icon in logo?

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <header class="header">
           <div class="header-left">
-            <a class="logo-link" href="index.html"> <span class="logo"> <div class="icon-quotes-left"> </div></span></a></div>
+            <a class="logo-link" href="index.html"> <span class="logo"><div class="icon-quotes-left"> </div> </span> Prechu </a></div>
           <div class="header-right">
             <div class="burger">
               <table class="burger-nav">
@@ -48,7 +48,7 @@
       </header>
       <section class="hero">
         <div class="hero-background"> </div>
-
+        <div class="hero-border"> </div>
         <div class="container hero-container">
           <div class="hero-left"> <img class="ipone" src="images/iphone@2x.svg" alt="image"> </div>
           <div class="hero-right">
