--- a/index.html
+++ b/index.html
@@ -20,25 +20,10 @@
             <a class="logo-link" href="index.html"> <span class="logo"><img  class="logo_pic" src="images/logo@2x.jpg"> </span> Prechu </a></div>
           <div class="header-right">
 
-            <div class="burger">
-              <table class="burger-nav">
-                <tr>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                </tr>
-                <tr>
-                  <td></td>
-                </tr>
-
-              </table>
+            <div class="burger" onclick="myFunction(this)">
+              <div class="burger-list bar1"></div>
+              <div class="burger-list bar2"></div>
+              <div class="burger-list bar3"></div>
             </div>
             <nav class="navigation">
               <a class="home-link" href="#"> Home </a>
@@ -46,39 +31,56 @@
               <a class="link" href="#"> Services </a>
               <a class="link" href="#"> Conact </a>
             </nav>
+            <nav class="nav-mobile">
+              <ul class="hidden">
+                <li><a class="link" href="#"> Home </a></li>
+                <li><a class="link" href="#"> Poducts </a></li>
+                <li><a class="link" href="#"> Services </a></li>
+                <li> <a class="link" href="#"> Contact </a> </li>
+              </ul>
+            </nav>
           </div>
       </div>
       </header>
+
       <section class="hero">
         <div class="hero-background"> </div>
         <div class="hero-border"> </div>
 
-          <div class="swiper-container">
-        <!-- Additional required wrapper -->
-        <div class="swiper-wrapper">
+        <div class="swiper-container">
+          <!-- Additional required wrapper -->
+          <div class="swiper-wrapper">
             <!-- Slides -->
-            <div class="swiper-slide container hero-container">  <div class="hero-left"> <img class="ipone" src="images/iphone@2x.svg" alt="image"> </div>
+            <div class="swiper-slide container hero-container">
+              <div class="hero-left"> <img class="ipone" src="images/iphone@2x.svg" alt="image"> </div>
               <div class="hero-right">
                 <h1 class="hero-title"> Lorem Ipsum is simply </h1>
                 <p class="hero-description"> dummy text of the <span class="description-content"> printing & typesetting </span> </p>
                 <button class="main-button"><img class="btn_pic" src="images/Shape_2.svg"><p class="button-description"> Sing up now </p></button>
-              </div></div>
-            <div class="swiper-slide container hero-container"> <div class="hero-left"> <img class="ipone" src="images/phone1.png" alt="image"> </div><div class="hero-right">
-              <h1 class="hero-title"> Lorem Ipsum is simply </h1>
-              <p class="hero-description"> dummy text of the <span class="description-content"> printing & typesetting </span> </p>
-              <button class="main-button"><img class="btn_pic" src="images/Shape_2.svg"><p class="button-description"> Sing up now </p></button>
-            </div></div>
-            <div class="swiper-slide container hero-container"> <div class="hero-left"> <img class="ipone" src="images/phone2.png" alt="image"> </div><div class="hero-right">
-              <h1 class="hero-title"> Lorem Ipsum is simply </h1>
-              <p class="hero-description"> dummy text of the <span class="description-content"> printing & typesetting </span> </p>
-              <button class="main-button"><img class="btn_pic" src="images/Shape_2.svg"><p class="button-description"> Sing up now </p></button>
-            </div></div>
+              </div>
+            </div>
+            <div class="swiper-slide container hero-container">
+              <div class="hero-left"> <img class="ipone" src="images/phone1.png" alt="image"> </div>
+              <div class="hero-right">
+                <h1 class="hero-title"> Lorem Ipsum is simply </h1>
+                <p class="hero-description"> dummy text of the <span class="description-content"> printing & typesetting </span> </p>
+                <button class="main-button"><img class="btn_pic" src="images/Shape_2.svg"><p class="button-description"> Sing up now </p></button>
+              </div>
+            </div>
+            <div class="swiper-slide container hero-container">
+              <div class="hero-left"> <img class="ipone" src="images/phone2.png" alt="image"> </div>
+              <div class="hero-right">
+                <h1 class="hero-title"> Lorem Ipsum is simply </h1>
+                <p class="hero-description"> dummy text of the <span class="description-content"> printing & typesetting </span> </p>
+                <button class="main-button"><img class="btn_pic" src="images/Shape_2.svg"><p class="button-description"> Sing up now </p></button>
+              </div>
+            </div>
             ...
+          </div>
+          <!-- If we need navigation buttons -->
+          <div class="swiper-button-prev"></div>
+          <div class="swiper-button-next"></div>
         </div>
-        <!-- If we need navigation buttons -->
-        <div class="swiper-button-prev"></div>
-        <div class="swiper-button-next"></div>
-      </div>
 
 
 
@@ -87,69 +89,80 @@
 
       <main class="main">
         <section>
-        <div class="container">
-          <div class="row">
-            <div class="col-1-3">
-              <div class="card">
-                <div class="card-header pencil">
-                  <figure class="card-img"> <img class="card-img" src="images/pencil.svg"></figure>
-                </div>
-                <div class="card-body">
-                  <div class="card-title"> Contrary to popular </div>
-                  <div class="card-description"> Lorem Ipsum is not simply random text. It has roots in a piece </div>
-                </div>
-              </div>
-            </div>
-            <div class="col-1-3">
-              <div class="card">
-                <div class="card-header tele">
-                  <figure class="card-img"> <img class="card-img" src="images/tele.svg"></figure>
-                </div>
-                <div class="card-body">
-                  <div class="card-title"> Contrary to popular </div>
-                  <div class="card-description"> Lorem Ipsum is not simply random text. It has roots in a piece </div>
+          <div class="container">
+            <div class="row">
+              <div class="col-1-3">
+                <div class="card">
+                  <div class="card-header pencil">
+                    <figure class="card-img"> <img class="card-img" src="images/pencil.svg"></figure>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-title"> Contrary to popular </div>
+                    <div class="card-description"> Lorem Ipsum is not simply random text. It has roots in a piece </div>
+                  </div>
                 </div>
               </div>
-            </div>
-            <div class="col-1-3">
-              <div class="card">
-                <div class="card-header basket">
-                  <figure class="card-img"> <img class="card-img" src="images/basket.svg"></figure>
+              <div class="col-1-3">
+                <div class="card">
+                  <div class="card-header tele">
+                    <figure class="card-img"> <img class="card-img" src="images/tele.svg"></figure>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-title"> Contrary to popular </div>
+                    <div class="card-description"> Lorem Ipsum is not simply random text. It has roots in a piece </div>
+                  </div>
                 </div>
-                <div class="card-body">
-                  <div class="card-title"> Contrary to popular </div>
-                  <div class="card-description"> Lorem Ipsum is not simply random text. It has roots in a piece </div>
+              </div>
+              <div class="col-1-3">
+                <div class="card">
+                  <div class="card-header basket">
+                    <figure class="card-img"> <img class="card-img" src="images/basket.svg"></figure>
+                  </div>
+                  <div class="card-body">
+                    <div class="card-title"> Contrary to popular </div>
+                    <div class="card-description"> Lorem Ipsum is not simply random text. It has roots in a piece </div>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
-        </div>
-      </section>
-      <section> <div class="container cart-container">
-        <div class="layout"><div class="gray-title"> The Shopping cart </div>
-          <figure class= "blue-basket"> <img src="images/cart.png" class="blue-basket"> </figure> </div>
-<div class="layout2"> <div class="gray-title bullets"> Some Bullet text here </div>
-<ul class="list">
-<li> Lorem Ipsum is simply dummy text of the printing and typesetting
-</li>
-<li>Lorem Ipsum has been the industry's standard dummy text ever </li>
-<li> When an unknown printer took a galley of type and scrambled </li>
-<li> It to make a type specimen book. It has survived not only five centuries</li>
-<li> But also the leap into electronic typesetting,</li>
-<li>Remaining essentially unchanged. It was popularised  </li>
-<li>The release of Letraset sheets containing Lorem Ipsum passages</li>
-</ul>
-</div>
-</div>
-</section>
-</div>
-      </main>
-      <footer class="footer"> Copyright © 2012-2013 cssauthor.com</footer>
-    </body>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
-  <script src="js/swiper.js"> </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.7/js/swiper.min.js"></script>
-  <script src="js/main.js">
+        </section>
+        <section>
+          <div class="container cart-container">
+            <div class="layout">
+              <div class="gray-title"> The Shopping cart </div>
+              <figure class="blue-basket"> <img src="images/cart.png" class="blue-basket"> </figure>
+            </div>
+            <div class="layout2">
+              <div class="gray-title bullets"> Some Bullet text here </div>
+              <ul class="list">
+                <li> Lorem Ipsum is simply dummy text of the printing and typesetting
+                </li>
+                <li>Lorem Ipsum has been the industry's standard dummy text ever </li>
+                <li> When an unknown printer took a galley of type and scrambled </li>
+                <li> It to make a type specimen book. It has survived not only five centuries</li>
+                <li> But also the leap into electronic typesetting,</li>
+                <li>Remaining essentially unchanged. It was popularised </li>
+                <li>The release of Letraset sheets containing Lorem Ipsum passages</li>
+              </ul>
+            </div>
+          </div>
+        </section>
+  </div>
+  </main>
+  <footer class="footer"> Copyright © 2012-2013 cssauthor.com</footer>
+  </body>
+  <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha256-pasqAKBDmFT4eHoN2ndd6lN370kFiGUFyTiUHWhU7k8=" crossorigin="anonymous"></script>
+  <script src="js/swiper.js">
+
+
   </script>
-</div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.0.7/js/swiper.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+  <script src="js/main.js">
+
+
+  </script>
+  </div>
+
 </html>
